# CustomRuntime

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.h
fftw-3.3.10/: config.status  libtool
fftw-3.3.10/tests/: bench
inference/: CMakeLists.txt
inference/include/: layers.h
inference/src/: layers.cpp
model_color_new_reference/: data.json  sequence.json
model_color_reference/: data.json  sequence.json
reader/: CMakeLists.txt
reader/include/: dataset_reader.h  model_reader.h
reader/src/: dataset_reader.cpp  model_reader.cpp
tests/: CMakeLists.txt  layer_test.cpp  utility_test.cpp
utils/: CMakeLists.txt
utils/include/: data_handler.h  format.h  functions.h  model.h  types.h
utils/src/: data_handler.cpp  format.cpp  functions.cpp  model.cpp  types.cpp
